# AgriTech-Project-Data-Engineering

./: README.md  pyproject.toml
data/: iowa.csv  iowa.las  pdal.json
notebooks/: Data_Fetching.ipynb  Data_Loading.ipynb  iowa.csv  iowa.las
src/AgriTech_Lidar_Wakura/: agri_tech_lidar.py
